# impeach

./: .dockerignore  .env.example  .gitignore  .npmrc  .sops.yaml  Enterprise_PRD_Impeachment_Intelligence_Platform.md  IIP_Technical_Design_Document.docx  eslint.config.js  graphify-watch.sh  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  product_scope_deck.pptx  stryker.config.json  tsconfig.base.json  tsconfig.json  turbo.json  vitest.config.ts  vitest.workspace.ts
.github/workflows/: chaos.yml  ci.yml  eval-full.yml  eval-smoke.yml
.serena/: project.yml
_bmad/: config.toml  config.user.toml
_bmad-output/: project-context.md  story13-complete.diff
_bmad-output/eval-artifacts/: iip-feasibility-report-2026-06-22.md  iip-feasibility-report-gemini-flash-single.json  iip-feasibility-report-gemini-pro-optimized.json  iip-feasibility-report-gemini-pro.json  iip-feasibility-report-v2-fast.json  iip-feasibility-report.json  iip_feasibility_gemini.py.txt
_bmad-output/implementation-artifacts/: 1-1-turborepo-scaffold-process-stubs.md  1-10-19-adrs-seeded.md  1-11-ci-pipeline-gate-artifact-store.md  1-12-citation-or-silence-contract-test-red.md  1-2-postgresql-pgvector-age-compatibility-proof.md  1-3-docker-compose-platform-stack.md  1-4-render-gate-eslint-boundary.md  1-5-polyglot-eval-seam.md  1-6-citation-package.md  1-7-design-token-system.md  1-8-stubbed-compound-components.md  (+29 more)
docs/: atdd-specification-guideline.md  glossary.md  invariant-ledger.yaml  pattern-index.md
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
infra/: Caddyfile  docker-compose.yml
scripts/: age-migrate.ts
secrets/: .env.sops.template
tests/: README.md
tools/eval/: Dockerfile  package.json  pyproject.toml
tools/eval/src/eval/: __init__.py  __main__.py  models.py  runner.py
tools/eval/tests/: test_roundtrip.py  test_smoke.py
(+327 files in other folders)
