[project]
name = "iip-eval"
version = "0.0.1"
description = "Impeachment Intelligence Platform - polyglot eval harness (stub; logic owned by Story 1.5)."
requires-python = ">=3.12,<3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eval"]
